--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,9 @@
 {
-  "dependencies": {
-    "express": "^4.18.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0",
-    "nodemon": "^2.0.19"
-  }
+    "dependencies": {
+        "express": "^4.18.1",
+        "express-graphql": "^0.12.0",
+        "graphql": "^16.6.0",
+        "lodash": "^4.17.21",
+        "nodemon": "^2.0.19"
+    }
 }
