--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,28 +3,67 @@ services:
   frontend:
     build:
       context: ./
-      dockerfile: Dockerfile.frontend
+      dockerfile: Dockerfile.front
     #            target: development
     ports:
-      - 8080:8080
-      - 4000:4000
+      - 5173:5173
     volumes:
-      - ./:/app
+      - ./frontend:/app
     # command: npm run serve
     # command: >
     #   ash -c 'npm install; npm run dev'
 
     tty: true
-    # depends_on:
-    #   - json-server
 
-  # json-server:
-  #   build:
-  #     context: ./
-  #     dockerfile: Dockerfile.js
-  #   ports:
-  #     - '3000:3000'
-  #   volumes: 
-  #     - ./data/db.json:/data/db.json
-  #   command: json-server --watch db.json --host 0.0.0.0
-  #   tty: true
+  backend:
+    build:
+      context: ./
+      dockerfile: Dockerfile.back
+    #            target: development
+    ports:
+      - 4000:4000
+    volumes:
+      - ./backend:/app
+    # command: npm run serve
+    # command: >
+    #   ash -c 'npm install; npm run dev'
+
+    tty: true
+    depends_on:
+      - mongo
+      - mongo-express
+
+  # mongoDB
+  mongo:
+    image: mongo:4.2
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+      # MONGO_INITDB_ROOT_USERNAME: root
+      # MONGO_INITDB_ROOT_PASSWORD: pass
+      # MONGO_INITDB_DATABASE: mytest
+    ports:
+      - 27017:27017
+    volumes:
+      - ./db/mongodb/db:/data/db
+      - ./db/mongodb/configdb:/data/configdb
+    # env_file:
+    #   - ./.env
+
+  mongo-express:
+    image: mongo-express:0.54.0
+    restart: always #リスタートしないと動かないよ
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME} #mongodbと同じにする必要がある
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      ME_CONFIG_MONGODB_AUTH_DATABASE: ${MONGO_INITDB_DATABASE}
+      ME_CONFIG_MONGODB_SERVER: mongo
+      # MONGO_INITDB_ROOT_USERNAME: root
+      # MONGO_INITDB_ROOT_PASSWORD: pass
+      # MONGO_INITDB_DATABASE: mytest
+    # env_file:
+    #   - ./.env
